--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <div class="header" id="header">Grid Sketch</div>
+    <div class="cont_button"></div>
+    <div class="grid" id="grid"></div>
     
 </body>
 </html>
