almost made the grid, have to fix borders to fit perfectly

--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Grid</title>
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="header" id="header">Grid Sketch</div>
-    <div class="cont_button"></div>
-    <div class="grid" id="grid"></div>
-    
+    <div class="flex_cont" id="flex_cont">
+        <div class="header" id="header">Grid Sketch</div>
+        <div class="cont_button"><button>heeelp</button></div>
+        <div class="cont_grid" id="cont_grid"></div>
+    </div>
 </body>
 </html>
