made all requirements and next time extrasss

--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
 <body>
     <div class="flex_cont" id="flex_cont">
         <div class="header" id="header">Grid Sketch</div>
-        <div class="cont_button"><button>heeelp</button></div>
+        <div class="form_cont">
+            <label for="quantity">How many boxes in a row do you want? (between 4 and 10):</label>
+            <input type="number" id="quantity" name="quantity" min="4" max="10">
+            <button class="submit_btn" id="submit_btn">heeelp</button>
+        </div>
         <div class="cont_grid" id="cont_grid"></div>
     </div>
 </body>
