some minor fixes

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="form_cont">
             <label for="quantity">How many boxes in a row do you want? (between 4 and 10):</label>
             <input type="number" id="quantity" name="quantity" min="4" max="10">
-            <button class="submit_btn" id="submit_btn">heeelp</button>
+            <button class="submit_btn" id="submit_btn">Draw</button>
         </div>
         <div class="cont_grid" id="cont_grid"></div>
     </div>
